praesentation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: praesentation-site
  labels:
    app: praesentation-site
spec:
  selector:
    matchLabels:
      app: praesentation-site
  template:
    metadata:
      labels:
        app: praesentation-site
    spec:
      nodeName: worker-k3s
      containers:
      - name: demo
        image: luca2005/praesentation
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 100m
        ports:
        - containerPort: 80
