praesentation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praesentation-site-service
spec:
  selector:
    app: praesentation-site
  ports:
    - protocol: TCP
      port: 80
